--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -18,9 +18,9 @@ WORKDIR /app
 
 RUN apt-get install -y build-essential libpython3-dev
 
-# Install packages specified in requirements.txt
-COPY requirements.txt /app/
-RUN pip install --no-cache-dir -r requirements.txt
+# Install packages specified in requirements.dev.txt
+COPY requirements.dev.txt /app/
+RUN pip install --no-cache-dir -r requirements.dev.txt
 
 # Get the environment variables
 ARG DATABASE_URL
