--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,6 +11,7 @@ services:
       - barometrs-language_models_volume:/app/models # Mount language models
     depends_on:
       - db
+      - redis
     environment:
       - DATABASE_URL=${DATABASE_URL}
     ports:
@@ -36,6 +37,12 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5433:5432"  # PostgreSQL port
+
+  redis:
+    image: redis:alpine
+    container_name: barometrs-redis
+    ports:
+      - "6379:6379"
 
 volumes:
   postgres_data:
