--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,6 +10,7 @@ services:
       - .:/app
     depends_on:
       - db
+      - redis
     environment:
       - DATABASE_URL=${DATABASE_URL}
     ports:
@@ -27,6 +28,12 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5433:5432"  # PostgreSQL port
+
+  redis:
+    image: redis:alpine
+    container_name: barometrs-redis
+    ports:
+      - "6379:6379"
 
 volumes:
   postgres_data:
