Update .env.example and add instructions to create tables for DB.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-DATABASE_URL=postgresql://emotion_classification:password@db:5432/emotion_classification
+DATABASE_URL=postgresql://barometrs:password@db:5432/barometrs
 WEB_CONTAINER_NAME=web
 DB_CONTAINER_NAME=db
-POSTGRES_DB=emotion_classification
-POSTGRES_USER=emotion_classification
+POSTGRES_DB=barometrs
+POSTGRES_USER=barometrs
 POSTGRES_PASSWORD=password
