--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ DB_CONTAINER_NAME=db
 POSTGRES_DB=barometrs
 POSTGRES_USER=barometrs
 POSTGRES_PASSWORD=password
+PATH_TO_PROJECT_DEV=/home/user/barometrs
