--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,7 @@ DB_CONTAINER_NAME=db
 POSTGRES_DB=barometrs
 POSTGRES_USER=barometrs
 POSTGRES_PASSWORD=password
-PATH_TO_PROJECT_DEV=/home/user/barometrs
+
+# Development environment
+DEV_PATH_TO_PROJECT=/home/user/barometrs
+DEV_DATABASE_URL=postgresql://barometrs:password@127.0.0.1:5433/barometrs
